# fb-locatielijst

./: .app.env  .app.env.example  .dockerignore  .gitignore  .postgres.env  .postgres.env.example  Dockerfile  Makefile  README.md  compose.override.example.yml  compose.yml  docker-compose.yml  dummy.yaml  make.ps1  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_linting.txt
.github/: dependabot.yml
.github/workflows/: dependabot-slack-notification.yml  dependabot.yml  linting.yml  linting_and_tests.yml  tests.yml
datafundament_fb/: manage.py  script.py  uwsgi.ini
datafundament_fb/datafundament_fb/: asgi.py  oidc_auth.py  urls.py  wsgi.py
datafundament_fb/help_docs/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
datafundament_fb/locations/: admin.py  filters.py  forms.py  managers.py  models.py  processors.py  querysets.py  signals.py  urls.py  validators.py  views.py
datafundament_fb/shared/: context.py  context_processors.py  middleware.py  tests.py  utils.py
datafundament_fb/templates/: home.html  login.html  site-base.html
deploy/: diff.py  docker-run.sh  wait-for-it.sh
deploy/app/: docker-run.sh
deploy/db/: setup-database.sh  setup.sql
etc/: mime.types
example_project/example_project/: urls.py
mssql_version/: .mssql.env.example  Dockerfile  docker-compose.yml  requirements.txt
runtime/app/: docker-run.sh  uwsgi.ini
src/fblocatie/: admin.py  apps.py  filters.py  forms.py  importer.py  models.py  querysets.py  urls.py  views.py
src/health/: urls.py  views.py
src/help_docs/: admin.py  apps.py  models.py  signals.py  (+3 more)
(+221 files in other folders)
