[project]
name = "fb-locatielijst"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dynamic = ["version"]

[tool.isort]
profile = "black"
[tool.autoflake]
ignore_init_module_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.main.settings"
pythonpath = [".", "./src", "./tests"]
addopts = "--cov --cov-report term-missing --no-cov-on-fail"

[tool.coverage.run]
source = ["./src"]

[tool.coverage.report]
fail_under = 89
skip_covered = true
show_missing = true
sort = "Cover"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (autoflake uses this)
    "I",   # isort
]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"src/main/settings.py" = ["E402"]
"tests/**.py" = ["F841"]
"src/**.py" = ["E722"]
